fixed sizing and spacing on wallpapers

--- a/frontend-spa/index.css
+++ b/frontend-spa/index.css
@@ -17,7 +17,7 @@ body {
     background-color:var(--color3);
 }
 
-img {
+.logo-image {
     position: fixed;
     right: 0;
     width: 250px;
@@ -40,6 +40,7 @@ img {
 }
 
 .sidebar .sidebar-content {
+    display: none;
     position: absolute;
     left: 100%;
     top: 0;
@@ -49,8 +50,21 @@ img {
 }
 
 .sidebar:hover .sidebar-content {
+    display: block;
     transition: all 0.5s ease;
     width: 250px;
+}
+
+.sidebar .wallpapers-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sidebar .wallpapers-container img {
+    width: 100px;
+    height: 70px;
+    margin: 10px;
 }
 
 
